--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <title>{% block title %}MyFrenchHub!{% endblock %}</title>
 	{% block stylesheets %}
-                   <link rel="stylesheet" type="text/css" href="css/devis.css " />
+                   
                          <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css " /> 
 	{% endblock %}
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
@@ -61,7 +61,7 @@
                                     <div class="form-group">
                                         <label for="Tel">Tel</label> :   <input type="tel" name="tel"   class="form-control"required>   
                                     </div>
-                                <label for="pays"class="col-xs-8 control-label">Nombres de salariés concernées :</label> 
+                                <label for="salarier"class="col-xs-8 control-label">Nombres de salariés concernées :</label> 
                                  <div class="col-xs-4 selectContainer">
                                     <select name="select" class="form-control">
                                                     <option value="value1">0 à 50</option> 
@@ -72,7 +72,7 @@
                                             
                                                      
              </div>
-                                       <div class="col-md-1"></div>
+             <div class="col-md-1"></div>
             <div class="col-md-4">
                            <h2>ASSISTANCE AU DEPART / ARRIVEE</h2>
                             
