--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -1,31 +1,87 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+                   
+    {{parent()}}
+    <link rel="stylesheet" type="text/css" href="css/formulaire.css " /> 
+{% endblock %}
 {% block body %}
-    <section id="relocation" class="content">
-        <form action="/adhesion" method="post">
-            <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
-            <label for="adress">Adress</label> :   <input type="text" name="adress" required >    <br>
+        <div id="petitlogo">
+                <img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub">
+        </div> 
+    
+     <section >
+         
+         <article id="presentation">
+             <h1>La mobilité en toute tranquilité !</h1>
+         <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget porttitor augue. 
+             Praesent consectetur id odio et ultricies. 
+             Praesent in velit lacinia, congue risus ac, viverra sapien. 
+             Donec ante ex, tempus non tortor ac, venenatis ullamcorper justo. 
+             Aliquam a dapibus nisl. Curabitur vel orci sem. 
+             Cras tempor quam vel fringilla suscipit. Nam maximus nunc ac elit molestie, ut elementum augue egestas. 
+             Vivamus scelerisque bibendum odio nec euismod. Donec hendrerit tincidunt elementum. 
+             Nulla nulla dolor, consectetur et magna non, blandit accumsan mi. Vivamus egestas lorem ut porta bibendum. 
+         </p>
+         </article>
+         <div id="formule" >
+             <h3>Devenez membre de MyFrenchHub <br> à partir de 199€ /an</h3><br>
+          <form action="/adhesion" method="post">
+              de 1 à 50 salariés  199€<input type="checkbox" name="option" value="1">  <br>
+                  de 50 à 249 salariés   399€<input type="checkbox" name="option" value="2">  <br>
+                  de 250 à 1000 salariés  599€<input type="checkbox" name="option" value="3"> <br>
+                    plus de 1000 salariés  1099€<input type="checkbox" name="option" value="4"> <br>
+         </div>
+     </section>
+    
+    <section  id="formEnt">
+       
+            <label for='societe'>Nom entreprise :</label>  <input type='text' name='societe' required><br>
+            <label for="activite">domaine d'activitée</label> : <input type='text' name='activite' ><br> 
+             <label for="salarier">Nombres de salariés concernées :</label> 
+            <select name="salarier">
+                                                    <option value="1">1 à 49</option> 
+                                                    <option value="2">50 à 249</option> 
+                                                     <option value="3"> 250 à 1000</option> 
+                                                     <option value="4"> plus de 1000</option>
+            </select> <br>
+            <label for="adress">Adresse</label> :   <input type="text" name="adress" required >    <br>
+            <label for="codepostal">Code postal</label> :   <input type="text" name="cp" >  <br>
+            <label for="ville">Ville</label> :   <input type="text" name="ville" required >  <br>
             <label for="pays">pays</label> :   
-            <select name="select">
+            <select name="pays">
                 {% for pays in nomPays %}
-                    <option value="value1">{{pays.nom_fr_fr}}</option> 
+                    <option value="{{pays.nom_fr_fr}}">{{pays.nom_fr_fr}}</option> 
                 {% endfor%}
             </select>
-               
-            <label for="siren">Siren</label> :   <input type="text" name="siren" >   
-            <label for="siret">Siret</label> :   <input type="number" name="siret" >   <br>
-            <label for="description">Description</label> : <textarea rows="3" cols="50" name="description" > </textarea>  <br>
-            <label for="forme">Forme juridique</label> :   <input type="text" name="forme" > <br>  
-            <label for="contact">Contact principal</label> :   <input type="text" name="contact" required >   <br>
+              <label for="siren">Siren</label> :   <input type="text" name="siren" id="siren">   <br>
+              <h4>Contact principal</h4><br>
+             <label for="titre1">Mr :</label>
+             <input type="radio" name="civilite"  value="0"/><br>
+               <label for="titre2">Mme :</label>
+               <input type="radio" name="civilite" value="1"/><br>
+            <label for="nom">nom</label> :   <input type="text" name="nom" required >   <br>
+             <label for="prenom">prénom</label> :   <input type="text" name="prenom" >   <br>
             <label for="fonction">Fonction</label> :   <input type="text" name="fonction" required>  <br> 
             <label for="email">Email</label> :   <input type="email" name="email"  required><br>   
             <label for="Tel">Tel</label> :   <input type="tel" name="tel" required>   <br>
+            
+            
+            <label for="newsLetter">Je voudrais recevoir la news Letter de MyFrenchHub </label>
+            <input type="checkbox" name="newsLetter" value="gen">  <br>
+            <p>En plus de la newsLetter generale, vous pouvez choisir des themes sur lequel vous voulez recevoir plus d'information </p>
+                Logement<input type="checkbox" name="news1" value="1">  <br>
+                  Immigration<input type="checkbox" name="news2" value="2">  <br>
+                  pole de compétitivité<input type="checkbox" name="news3" value="3"> <br>
+                 Fiscalité<input type="checkbox" name="news4" value="4"> <br>
+                 intégration<input type="checkbox" name="news5" value="5"> <br>
+                 La marque blanche<input type="checkbox" name="news6" value="6"> <br>
             <input type="submit" name="valider" value="valider">
         </form>
         {% if (message2 !=null ) %}
-          <div>
+          <p>
                 {{ message2 }}
-          </div>
+          </p>
         {% endif %}
     </section>
     
