--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,26 +5,23 @@
     <header class="content" id="top">
         <section id="menu">        
             <!-- bubble navigation --> 
-            <div class="logo">
-                <img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub">
-            </div>
-            <a href="/sinscrire" class="sign_up"><span>Devenez<br /><strong>membre!</strong></span></a>
-            <a href="#relocation" class="relocation">Relocation</a>
-            <a href="#formation" class="formation">Formation</a>
-            <a href="#community" class="community">Communauté</a>
+            <a href="/sinscrire" class="sign_up"><span>Devenez<br /><strong>membre</strong></span></a>
+            <a href="#services" class="services"><span>Audit<br />et conseils</span></a>
+            <a href="#mobility" class="mobility"><span>Services<br />de mobilités</span></a>
+            <a href="#community" class="community"><span>My French<br />cl'hub</span></a>
 
             <!-- teaser sentence -->
             <p class="teaser">Solutions<br /><strong>to move</strong><br />to France</p>
 
-            <a href="#relocation" id="scroll_down">Descendre</a>
+            <a href="#services" id="scroll_down">Descendre</a>
         </section>
     </header>
-    <section id="relocation" class="content" data-id="active_content">
+    <section id="services" class="content" data-id="active_content">
         <h1>SECTION 1</h1>
         
 
     </section>
-    <section id="formation" class="content">
+    <section id="mobility" class="content">
       
 
     </section>
