--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,9 +21,9 @@
     font-style: normal;
 }
 *, *:before, *:after { margin: 0; padding: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
-html, body, header, #relocation, #formation, #community { width: 100%; height: 100%;}
+html, body, header, #services, #mobility, #community { width: 100%; height: 100%;}
 body { font-family: verdana, sans-serif;}
-.container { position: relative; left: 0; overflow-x: hidden;}
+.container { position: relative; left: 0; overflow-x: hidden; color: #7d7d7d;}
 header { position: relative; background: url(../img/fond-home.jpg) no-repeat center fixed; background-size: cover; -webkit-background-size: cover;}
 
 /* Menu */
@@ -35,28 +35,28 @@ nav.menu-open { left: 0px;}
 .menu-btn-active { display: none;}
 .menu-btn, .menu-btn-active { position: fixed; top: 25px; z-index: 9999; color: #fff0d9; font-size: 3em; cursor: pointer}
 .menu { width: auto; height: auto;}
-.menu a { text-decoration: none; color: #686560;}
-.menu > li > a { background-color: #fff0d9; border-bottom: 1px solid #33373d; width: 100%;height: 3em; line-height: 3em; text-indent: 3em; display: block;position: relative;transition: all 500ms;}
+.menu a { text-decoration: none; color: #717070;}
+.menu > li > a { background-color: rgba(255,240,217,1); border-bottom: 1px solid #33373d; width: 100%;height: 3em; line-height: 3em; text-indent: 3em; display: block;position: relative;transition: all 500ms;}
 .menu ul li a { background-color: rgba(255,240,217,0.4); border-bottom: 1px solid #efeff0; width: 100%; padding-left: 2.50em; line-height: 2.50em; display: block; position: relative; font-size: 0.9em; transition: all 500ms;}
 .menu > li > a:hover, .menu > li > a.active { background-color: #cfa783;}
 .menu > li > ul li:hover a { color: #32373D;}
-.active{ color:#f36666;}
-.menu_active > li > a { background-color: rgba(243,102,102,0.8);}
-.menu_active ul li a { background-color: rgba(243,102,102,0.4);}
-.menu_active > li > a:hover, .menu_active > li > a.active { background-color: rgba(243,102,102,1);}
+.active { color: #c5bca3;}
+.menu_active > li > a { background-color: rgba(197,188,163,0.8);}
+.menu_active ul li a { background-color: rgba(197,188,163,0.4);}
+.menu_active > li > a:hover, .menu_active > li > a.active { background-color: #c5bca3;}
 
 /* connection bar */
-#header_crossbar { position: absolute; top: 0; right: 0; z-index: 9999; padding: 5px 10px; background: #eee;}
+#header_crossbar { position: absolute; top: 0; right: 0; z-index: 9999; padding: 5px 10px; background: rgba(255,255,255,0.5);}
 #header_crossbar > a, #search, #lang { display: inline-block;}
-#header_crossbar > a { height: 25px; padding: 0 8px; line-height: 25px; text-decoration: none; color: #686560;}
+#header_crossbar > a { height: 25px; padding: 0 8px; line-height: 25px; text-decoration: none; color: #717070;}
 #search input[name=search] { padding-left: 5px; border: none; border-radius: 20px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
 #search input[type=submit] { width: 24px; height: 24px; border: none; background-color: inherit; background: url(../img/search.png) no-repeat; text-indent: -9999px; cursor: pointer;}
 #lang select { border: none; background-color: inherit;}
-#login_content { display: none; position: absolute; top: 36px; left: 0; z-index: 999; width: 100%; padding: 15px 15px 0; background: #686560; color: #eee;}
+#login_content { display: none; position: absolute; top: 36px; left: 0; z-index: 999; width: 100%; padding: 15px 15px 0; background: #c5bca3;}
 #login_content label, #login_content input[type=submit] { display: block;}
 #login_content input[type=text], #login_content input[type=password] { width: 100%;}
-#login_content input[type=submit] { margin: 15px auto 0; padding: 10px; border:none; border-radius: 50% 50% 0px 0px; background-color: #f3686b; color: rgb(255, 255, 255); text-align: center; cursor: pointer;}
-#login_content input[type=submit]:hover { color: #686560;}
+#login_content input[type=submit] { margin: 15px auto 0; padding: 10px; border:none; border-radius: 50% 50% 0px 0px; background-color: #f3686b; color: #fff; text-align: center; cursor: pointer; transition: all 500ms;}
+#login_content input[type=submit]:hover { color: #32373D;}
 
 /* bubble */
 .sign_up, .services, .mobility, .community {display: block; position: absolute; text-align: center; text-decoration: none; font-size: 1.2em; color: #686560; transition: all 500ms;}
@@ -65,14 +65,14 @@ nav.menu-open { left: 0px;}
 .sign_up span, .services span, .mobility span, .community span { vertical-align:middle; display:inline-block; line-height:normal;}
 .sign_up { top: 10%; left: 12%; width: 300px; height: 300px; line-height: 200px;
 } 
-.sign_up strong { text-transform: uppercase; color: #f3686b;}
+.sign_up strong { text-transform: uppercase; color: #f1696b;}
 .services { left: 15%;}
 .mobility { left: 45%;}
 .community { left: 75%;}
 
 /* teaser */
 .teaser { position: absolute; top: 12%; right: 12%; font-family: 'y2k_neophyteregular', verdana, sans-serif; font-size: 4em; text-align: right; color: #fff;}
-.teaser strong { text-transform: uppercase; color: #fff0da;}
+.teaser strong { text-transform: uppercase; color: #ffefd8;}
 
 /* scroll */
 #scroll_up, #scroll_down { bottom: 10px; width: 64px; height: 34px; background: url(../img/arrow.png) no-repeat; text-indent: -9999px;}
@@ -80,7 +80,7 @@ nav.menu-open { left: 0px;}
 #scroll_down { position: absolute; left: 50%;}
 
 /* section */
-#relocation { background-color: red;}
-#formation { background-color: black;}
-#community { background-color: yellow;}
+#mobility, #community { background-color: #fff;}
+#mobility h2 { color: }
+#services { background-color: #c5bca3;}
 footer { background-color: green; height: 20%;}
