nouvelle home finit, en attente des elements graphique

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,10 +21,17 @@
     font-style: normal;
 }
 *, *:before, *:after { margin: 0; padding: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
-html, body, header, #services, #mobility, #community { width: 100%; height: 100%;}
+html, body { width: 100%; height: 100%;}
 body { font-family: verdana, sans-serif;}
 .container { position: relative; left: 0; overflow-x: hidden; color: #7d7d7d;}
-header { position: relative; background: url(../img/fond-home.jpg) no-repeat center fixed; background-size: cover; -webkit-background-size: cover;}
+header, #services, #mobility, #community { position: relative; width: 100%; min-height: 100%;}
+header { background: url(../img/fond-home.jpg) no-repeat center fixed; background-size: cover; -webkit-background-size: cover;}
+h1, h2, h3, h4, h5, h6 { font-family: 'y2k_neophyteregular', verdana, sans-serif; text-transform: uppercase;}
+h1 { font-size: 2em;}
+h2 { font-size: 1em;}
+p { font-size: 1em;}
+ul { list-style: none;}
+a { text-decoration: none;}
 
 /* Menu */
 nav { position: fixed; top: 0; left: -250px; z-index: 1000; width: 250px; height: 100%; overflow: auto; font-size: 1em;}
@@ -41,9 +48,9 @@ nav.menu-open { left: 0px;}
 .menu > li > a:hover, .menu > li > a.active { background-color: #cfa783;}
 .menu > li > ul li:hover a { color: #32373D;}
 .active { color: #c5bca3;}
-.menu_active > li > a { background-color: rgba(197,188,163,0.8);}
-.menu_active ul li a { background-color: rgba(197,188,163,0.4);}
-.menu_active > li > a:hover, .menu_active > li > a.active { background-color: #c5bca3;}
+.active > li > a { background-color: rgba(197,188,163,0.8);}
+.active ul li a { background-color: rgba(197,188,163,0.4);}
+.active > li > a:hover, .active > li > a.active { background-color: #c5bca3;}
 
 /* connection bar */
 #header_crossbar { position: absolute; top: 0; right: 0; z-index: 9999; padding: 5px 10px; background: rgba(255,255,255,0.5);}
@@ -55,11 +62,11 @@ nav.menu-open { left: 0px;}
 #login_content { display: none; position: absolute; top: 36px; left: 0; z-index: 999; width: 100%; padding: 15px 15px 0; background: #c5bca3;}
 #login_content label, #login_content input[type=submit] { display: block;}
 #login_content input[type=text], #login_content input[type=password] { width: 100%;}
-#login_content input[type=submit] { margin: 15px auto 0; padding: 10px; border:none; border-radius: 50% 50% 0px 0px; background-color: #f3686b; color: #fff; text-align: center; cursor: pointer; transition: all 500ms;}
+#login_content input[type=submit] { margin: 15px auto 0; padding: 10px; border:none; border-radius: 50% 50% 0px 0px; background-color: #f1696b; color: #fff; text-align: center; cursor: pointer; transition: all 500ms;}
 #login_content input[type=submit]:hover { color: #32373D;}
 
 /* bubble */
-.sign_up, .services, .mobility, .community {display: block; position: absolute; text-align: center; text-decoration: none; font-size: 1.2em; color: #686560; transition: all 500ms;}
+.sign_up, .services, .mobility, .community {display: block; position: absolute; text-align: center; text-decoration: none; font-size: 1.2em; color: #686560; text-transform: uppercase; transition: all 500ms;}
 .services, .mobility, .community { top: 60%; width: 200px; height: 200px; line-height: 200px; border-radius: 50%; background-color: rgba(255,255,255,0.5);}
 .services:hover, .mobility:hover, .community:hover { background-color: rgba(255,255,255,1);}
 .sign_up span, .services span, .mobility span, .community span { vertical-align:middle; display:inline-block; line-height:normal;}
@@ -71,16 +78,132 @@ nav.menu-open { left: 0px;}
 .community { left: 75%;}
 
 /* teaser */
-.teaser { position: absolute; top: 12%; right: 12%; font-family: 'y2k_neophyteregular', verdana, sans-serif; font-size: 4em; text-align: right; color: #fff;}
-.teaser strong { text-transform: uppercase; color: #ffefd8;}
+header h1 { position: absolute; top: 12%; right: 12%; font-family: 'y2k_neophyteregular', verdana, sans-serif; font-size: 4em; text-transform: inherit; text-align: right; color: #fff;}
+header h1 strong { text-transform: uppercase; color: #ffefd8;}
 
 /* scroll */
-#scroll_up, #scroll_down { bottom: 10px; width: 64px; height: 34px; background: url(../img/arrow.png) no-repeat; text-indent: -9999px;}
+#scroll_up, .scroll_down { bottom: 10px; width: 64px; height: 34px; background: url(../img/arrow.png) no-repeat; text-indent: -9999px;}
 #scroll_up { display: none; position: fixed; right: 10px; width: 64px; transform: rotate(180deg);}
-#scroll_down { position: absolute; left: 50%;}
+.scroll_down { position: absolute; left: 50%;}
 
-/* section */
-#mobility, #community { background-color: #fff;}
-#mobility h2 { color: }
-#services { background-color: #c5bca3;}
+/* HOME */
+#services, #mobility, #community { padding: 50px;}
+#services li, #mobility li, #community li { margin-bottom: 50px;}
+#services li p, #mobility li p, #community li p { margin: 20px 0;}
+#services ul li a, #mobility ul li a, #community ul li a { float: right; font-size: 0.9em;}
+#services, #community { background-color: #fff;}
+#services > div, #mobility > div, #community > div { display: inline-block; vertical-align: top; width: 50%; max-height: 100%; padding: 20px;}
+#services h2, #services a { color: #f1696b;}
+#mobility { background-color: #c5bca3;}
+#mobility h1, #mobility p { color: #302f2f;}
+#mobility h2, #mobility a { color: #fff8e7;}
 footer { background-color: green; height: 20%;}
+
+/* SIGN_UP PAGE */
+#formule, #presentation
+{
+    width:40%;
+    display: inline-block;
+    padding:3%;
+}
+
+#presentation p
+{
+    border: solid 1px #262626;
+    padding:5%;
+}
+
+#petitlogo
+{
+    width:200px;
+    margin:auto;
+}
+
+#petitlogo img
+{
+    max-width: 80%;
+}
+
+.formname { 
+  /*text-align:center;*/
+  font-size: 1.5em;
+  font-weight:bold;
+-webkit-margin-before: 0.67em;
+-webkit-margin-after: 0.67em;
+  font-family:sans-serif;
+  color:#666;
+  border-bottom: 1px solid lightgray;
+  padding-bottom:20px;
+  width:80%;
+  margin:auto;
+}
+
+*:focus {
+    outline: 0;
+}
+
+form {
+display: block;
+margin-top: 0em;
+  
+}
+
+
+
+input, textarea,option {
+
+  font-weight: 90;
+  width: 70%;
+  margin: 8px 0;
+  text-indent: 1em;
+  padding: 10px 0;
+  border-radius: 3px;
+  border: 1px solid lightgray;
+}
+input[type="radio"]{
+    margin:0;
+    padding:1px;
+    
+}
+
+
+
+input[type="submit"] {
+     width: 10%;
+  font-weight: bold;
+    background-color: #3e87ec;
+  color: white;
+  border: 0px solid #3079ed;
+  transition:all 0.5s;
+}
+
+input[type="submit"]:hover {
+  background-color: #2963b3;
+  color: white;
+}
+
+#container{  
+  width:250px;
+  border: 1px solid lightgray;
+  padding:10px;
+    background-color:#fff;
+
+  
+}
+
+a{
+  color: #427fed;
+cursor: pointer;  
+  text-decoration:none;
+  
+}
+#formEnt{
+    width:80%;
+     margin: auto;
+    padding: 2%;
+}
+
+#siren
+{
+    width: 200px;
+}
