--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -11,17 +11,19 @@
             <a href="#community" class="community"><span>My French<br />cl'hub</span></a>
 
             <!-- teaser sentence -->
-            <p class="teaser">Solutions<br /><strong>to move</strong><br />to France</p>
+            <h1>Solutions<br /><strong>to move</strong><br />to France</h1>
 
-            <a href="#services" id="scroll_down">Descendre</a>
+            <a href="#services" class="scroll_down">scroll</a>
         </section>
     </header>
-    <section id="mobility" class="content" data-id="active_content">
+    <section id="services" class="content" data-id="active_content">
         <div class="left">
-            <h1>Bénéficiez d'un audit sur mesure</h1>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-        <div>
-        <div class="right">
+            <div>
+                <h1>Bénéficiez d'un audit sur mesure</h1>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+            </div>
+        </div><!--
+     --><div class="right">
             <ul>
                 <li>
                     <h2>Politique de mobilité et besoins</h2>
@@ -44,9 +46,10 @@
                     <a href="#"><em>En savoir</em> +</a>
                 </li>
             </ul>
-        <div>
+        </div>
+        <a href="#mobility" class="scroll_down">scroll</a>
     </section>
-    <section id="services" class="content">
+    <section id="mobility" class="content">
         <div class="left">
             <ul>
                 <li>
@@ -75,17 +78,18 @@
                     <a href="#"><em>En savoir</em> +</a>
                 </li>
             </ul>
-        <div>
-        <div class="right">
+        </div><!--
+     --><div class="right">
             <h1>Service mobilité</h1>
             <p>My French Hub vous propose sur devis un large choix de services de mobilités packagés selon les besoins de votre structure pour l’ensemble de vos adhérents. Vos adhérents ont aussi la possibilité de compléter leurs besoins en accès individuel et sur devis complémentaire personnalisé. Un consultant unique se tient à la disposition de l’impatrié durant tout le process.</p>
-        <div>
+        </div>
+        <a href="#community" class="scroll_down">scroll</a>
     </section>
     <section id="community" class="content" data-id="active_content">
         <h1>My french cl'Hub</h1>
         
     
-        
+        <a href="#footer" class="scroll_down">scroll</a>
     </section>
         
 {% endblock %}
