espace entreprise debut

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,6 @@ nav.menu-open { left: 0px;}
 
 /* section */
 #mobility, #community { background-color: #fff;}
-#mobility h2 { color: }
+#mobility h2 { color: #c5bca3;}
 #services { background-color: #c5bca3;}
 footer { background-color: green; height: 20%;}
