--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/formulaire.css " /> 
 {% endblock %}
 {% block body %}
-        <div id="petitlogo">
-                <img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub">
+       <div id="petitlogo">
+        <a href="/accueil" ><img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub"></a>
         </div> 
     
      <section >
