--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,7 +150,7 @@ margin-top: 0em;
 
 
 
-input, textarea,option {
+/* input, textarea,option {
 
   font-weight: 90;
   width: 70%;
@@ -159,7 +159,7 @@ input, textarea,option {
   padding: 10px 0;
   border-radius: 3px;
   border: 1px solid lightgray;
-}
+} */
 input[type="radio"]{
     margin:0;
     padding:1px;
