--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,19 +23,20 @@
                 </li>
                 <li class="item2"><a href="#services">Audit et conseils</a>
                     <ul>
-                        <li class="subitem1"><a href="/formation/Formation1">&#187; Politique de mobilité et besoins</a></li>
-                        <li class="subitem2"><a href="/formation/Formation2">&#187; Assistance intégration</a></li>
-                        <li class="subitem3"><a href="/formation/Formation3">&#187; Marque employeur</a></li>
-                        <li class="subitem4"><a href="/formation/Formation3">&#187; Engagement qualité</a></li>
+                        <li class="subitem1"><a href="/services/Formation1">&#187; Politique de mobilité et besoins</a></li>
+                        <li class="subitem2"><a href="/services/Formation2">&#187; Assistance intégration</a></li>
+                        <li class="subitem3"><a href="/services/Formation3">&#187; Marque employeur</a></li>
+                        <li class="subitem4"><a href="/services/Formation4">&#187; Engagement qualité</a></li>
+                        
                     </ul>
                 </li>
                 <li class="item3"><a href="#mobility">Mobilité internationale</a>
                     <ul>
-                        <li class="subitem1"><a href="/relocation/assistance">&#187; Assistance Départ et Arrivé</a></li>
-                        <li class="subitem2"><a href="/relocation/logement">&#187; Logement</a></li>
-                        <li class="subitem3"><a href="/relocation/administration">&#187; Administration</a></li>
-                        <li class="subitem4"><a href="/relocation/immigration">&#187; Immigration</a></li>
-                        <li class="subitem5"><a href="/relocation/famille">&#187; Famille</a></li>
+                        <li class="subitem1"><a href="/mobilite/assistance">&#187; Assistance Départ et Arrivé</a></li>
+                        <li class="subitem2"><a href="/mobilite/logement">&#187; Logement</a></li>
+                        <li class="subitem3"><a href="/mobilite/administration">&#187; Administration</a></li>
+                        <li class="subitem4"><a href="/mobilite/immigration">&#187; Immigration</a></li>
+                        <li class="subitem5"><a href="/mobilite/famille">&#187; Famille</a></li>
                     </ul>
                 </li>
                 <li class="item4"><a href="#community">Hub</a>
